<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtViewBookStoreTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinnerBookSelector"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:entries="@array/bookNames"
                android:spinnerMode="dialog" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewBookTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtViewBookTitle" />

            <TextView
                android:id="@+id/textViewBookAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtViewBookAuthor" />

            <TextView
                android:id="@+id/textViewBookGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtViewBookGenre" />

            <TextView
                android:id="@+id/textViewBookPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtViewBookPrice" />

            <TextView
                android:id="@+id/textViewBookStock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtViewBookStock" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnViewAddToCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnAddToCart" />

            <Button
                android:id="@+id/btnViewClearCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnClearCart" />

            <Button
                android:id="@+id/btnViewPurchase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnPurchase" />

            <RadioGroup
                android:id="@+id/rdGroupDelivery"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioBtnViewNormalDelivery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radioBtnNormalDelivery" />

                <RadioButton
                    android:id="@+id/radioBtnViewFastDelivery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radioBtnFastDelivery" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textViewFinalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtViewFinalPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listView" />

</androidx.constraintlayout.widget.ConstraintLayout>